option java_outer_classname = "PersonProtos";

message Person {
  required string name = 1;
  optional string theEmail = 2;
}